# challenge

Sourcecode/Encryption/: Cargo.toml  shellcode.rs
Sourcecode/Encryption/src/: dfc.rs  main.rs  shellcode.rs
Sourcecode/Hasher/: Cargo.toml  shellcode.rs
Sourcecode/Hasher/src/: main.rs
Sourcecode/MsgBox/: Cargo.toml
Sourcecode/MsgBox/src/: main.rs
Sourcecode/NtSockets/: Cargo.toml
Sourcecode/NtSockets/src/: main.rs
Sourcecode/indirect_syscall_injeciton/: Cargo.toml  build.rs
Sourcecode/indirect_syscall_injeciton/resources/: resource.rc
Sourcecode/indirect_syscall_injeciton/src/: dfc.rs  enc_shellcode.rs  hellshall.rs  main.rs
Sourcecode/indirect_syscall_injeciton/src/asm/gnu/: hellsasm.asm
Sourcecode/indirect_syscall_injeciton/src/asm/msvc/: hellsasm.asm
