[package]
name = "NtSockets"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = {version = "0.61.3", features = [
    "Win32_Foundation",    
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
    "Wdk_Foundation",
    "Win32_System_Registry",
    "Wdk_System_IO",
    "Wdk_Storage_FileSystem",
]}
