[package]
name = "OneDriveSetup"
version = "0.1.0"
edition = "2024"

[dependencies]
ntapi = "0.4.1"

[dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Wdk_System_SystemServices",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_WindowsProgramming"
]


[build-dependencies]
cc = "1.2.31"
nasm-rs = "0.3.0"
thiserror = "2.0"
anyhow = "1.0"
find-winsdk = { version = "0.2", optional = true }


[target.'cfg(target_env = "msvc")'.build-dependencies]
find-winsdk = "0.2"